test/assets/manifests/clusterissuer-with-proxy.yml
apiVersion: horizon.evertrust.io/v1beta1
kind: ClusterIssuer
metadata:
  name: clusterissuer-with-proxy
spec:
  url: http://horizon.horizon.svc.cluster.local:9000
  proxy: http://tinyproxy.tinyproxy.svc.cluster.local:8888
  profile: issuer
  authSecretName: horizon-credentials
