test/assets/manifests/proxy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tinyproxy
---
apiVersion: v1
kind: Pod
metadata:
  name: tinyproxy
  namespace: tinyproxy
  labels:
    app: tinyproxy
spec:
  containers:
    - name: tinyproxy
      image: monokal/tinyproxy
      args:
        - ANY
      ports:
        - containerPort: 8888
          name: http-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: tinyproxy
  namespace: tinyproxy
spec:
  selector:
    app: tinyproxy
  ports:
    - name: http-proxy
      port: 8888
      targetPort: http-proxy
